--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #dbdbdb;
+    background: #546E7A;
     font-size: 100%;
 }
 form input#note_text {
@@ -14,7 +14,6 @@ ul#stickies li {
     padding: 15px 15px 50px 15px;
     width: 200px;
     height: 200px;
-    border: 1px solid #bfbfbf;
     background-color: LightGoldenRodYellow;
     color: black;
     text-decoration: none;
